# iam-policy-autopilot

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  TELEMETRY.md  cliff.toml  dylint.toml  pyproject.toml
iam-policy-autopilot-common/: Cargo.toml
iam-policy-autopilot-common/src/telemetry/: client.rs  config.rs  event.rs  mod.rs  span.rs
iam-policy-autopilot-common/tests/: telemetry_derive_test.rs
iam-policy-autopilot-lints/: Cargo.toml  README.md  rust-toolchain
iam-policy-autopilot-lints/src/: lib.rs  node_kind_literal.rs
iam-policy-autopilot-lints/ui/: main.rs  main.stderr
iam-policy-autopilot-policy-generation/: Cargo.toml  build.rs
iam-policy-autopilot-policy-generation/resources/config/: service-configuration.json
iam-policy-autopilot-policy-generation/resources/config/external-library-models/: aws_lambda_powertools.json
iam-policy-autopilot-policy-generation/resources/config/operation-fas-maps/: dynamodb.json  ecr.json  events.json  kinesis.json  logs.json  redshift-data.json  s3.json  secretsmanager.json  sns.json  sqs.json  ssm.json
iam-policy-autopilot-policy-generation/resources/config/sdks/: boto3_utilities_mapping.json  go-sdk-v2-features.json  js_v3_libraries.json
iam-policy-autopilot-policy-generation/resources/config/terraform/: README.md  terraform-crud-map.json  terraform-model.json
iam-policy-autopilot-policy-generation/scripts/: generate_python_name_map.py
iam-policy-autopilot-policy-generation/src/: deserialization_tests.rs  embedded_data.rs  lib.rs  service_configuration.rs  shared_submodule_model.rs
iam-policy-autopilot-policy-generation/src/api/: common.rs  extract_sdk_calls.rs  generate_model.rs  generate_policies.rs  generate_policies_from_sdk_calls.rs  generate_policies_from_source.rs  get_submodule_version.rs  input_kind.rs  mod.rs  model.rs
iam-policy-autopilot-policy-generation/src/context_fetcher/: mod.rs
iam-policy-autopilot-policy-generation/src/enrichment/: engine.rs  http_client.rs  mod.rs  operation_fas_map.rs  resource_matcher.rs  service_reference.rs
iam-policy-autopilot-policy-generation/src/enrichment/terraform/: mod.rs  resource_binder.rs  service_resolver.rs
iam-policy-autopilot-policy-generation/src/errors/: mod.rs
iam-policy-autopilot-policy-generation/src/extraction/: engine.rs  extractor.rs  mod.rs  sdk_model.rs  service_hints.rs  waiter_model.rs
iam-policy-autopilot-policy-generation/src/extraction/call_graph/: gopls.rs  mod.rs
iam-policy-autopilot-policy-generation/src/extraction/external_library_models/: mod.rs
iam-policy-autopilot-policy-generation/src/extraction/go/: disambiguation.rs  extractor.rs  features.rs  features_extractor.rs  mod.rs  naming.rs  node_kinds.rs  paginator_extractor.rs  types.rs  utils.rs  waiter_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/java/: extractor.rs  matcher.rs  mod.rs  test_macros.rs  types.rs
iam-policy-autopilot-policy-generation/src/extraction/javascript/: argument_extractor.rs  extractor.rs  mod.rs  scanner.rs  shared.rs  types.rs
iam-policy-autopilot-policy-generation/src/extraction/python/: boto3_resources_model.rs  disambiguation.rs  disambiguation_tests.rs  extractor.rs  library_call_extractor.rs  mod.rs  node_kinds.rs  paginator_extractor.rs  resource_direct_calls_extractor.rs  variable_type_tracker.rs  waiters_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/shared/: extraction_utils.rs  mod.rs
iam-policy-autopilot-policy-generation/src/extraction/terraform/: hcl_parser.rs  mod.rs  state_parser.rs  variable_resolver.rs
iam-policy-autopilot-policy-generation/src/extraction/typescript/: extractor.rs  mod.rs
iam-policy-autopilot-policy-generation/src/lsp/: error.rs  gopls.rs  mod.rs  protocol.rs  test_utils.rs  ty.rs
iam-policy-autopilot-policy-generation/src/model_generation/: language_conventions.rs  mod.rs
iam-policy-autopilot-policy-generation/src/policy_generation/: engine.rs  integration_tests.rs  merge.rs  mod.rs  utils.rs
iam-policy-autopilot-policy-generation/src/providers/: concurrency.rs  filesystem.rs  json.rs  mod.rs
iam-policy-autopilot-policy-generation/src/terraform/: state_parser.rs
iam-policy-autopilot-policy-generation/tests/: go_extraction_integration_test.rs  go_sdk_features_test.rs  gopls_integration_tests.rs  java_extraction_integration_test.rs  javascript_extraction_integration_test.rs  lsp_integration_tests.rs  native_cert_store_test.rs  public_api_integration_test.rs  python_chained_subresource_action_test.rs  terraform_integration.rs  terraform_plan_integration.rs  waiters_extraction.rs
iam-policy-autopilot-policy-generation/tests/java/: service_name_test_cases.txt
iam-policy-autopilot-policy-generation/tests/java/entry_point/: basic.json  dynamodb_waiter.json  (+6 more)
iam-policy-autopilot-telemetry-derive/: Cargo.toml
iam-policy-autopilot-telemetry-derive/src/: lib.rs
iam-policy-autopilot-tools/: Cargo.toml
iam-policy-autopilot-tools/src/: lib.rs
iam-policy-autopilot-wasm/: .gitignore  Cargo.toml  README.md  build.sh  em_fetch.js  extractor.js  index.html  serve.sh
iam-policy-autopilot-wasm-emscripten/: Cargo.toml  ITERATION-NOTES.md  README.md  build.sh  em_fetch.js  index.html  serve.sh
iam-policy-autopilot-wasm-emscripten/npm/: package-lock.json  package.json
iam-policy-autopilot-wasm-emscripten/npm/src/: index.ts
iam-policy-autopilot-wasm-emscripten/src/: lib.rs
iam-policy-autopilot-wasm/npm/: package-lock.json  package.json  tsconfig.json
iam-policy-autopilot-wasm/npm/src/: extractor.ts  index.ts
iam-policy-autopilot-wasm/src/: lib.rs  policy.rs
integration-tests/runner/: Cargo.toml
integration-tests/runner/src/: autopilot.rs  aws.rs  cdk.rs  execution.rs  helpers.rs  iam.rs  lib.rs  main.rs  types.rs
xtask/: Cargo.toml
xtask/extract-terraform-crud-map/go/: main.go
xtask/src/: build_terraform_model.rs  build_unified_model.rs  extract_terraform_crud_map.rs  main.rs
xtask/src/utils/: mod.rs  non_sparse_submodule.rs
(+378 files in other folders)
