[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

# Standard Python package metadata
[project]
name = "iam-policy-autopilot" # The name it will have on PyPI
version = "0.1.0"
description = "A unified toolset for AWS IAM policy management, providing both proactive policy generation from source code analysis and reactive error fixing from AccessDenied messages."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["rust", "IAM Policy", "AWS"]

[tool.maturin]
manifest-path = "iam-policy-autopilot-cli/Cargo.toml"
bindings = "bin"
