[package]
name = "iam-policy-autopilot-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for IAM Policy Autopilot workspace crates"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
log.workspace = true

[dev-dependencies]
serial_test.workspace = true
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
