[package]
name = "iam-policy-autopilot-telemetry-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro derive for automatic telemetry event generation"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
