[package]
name = "iam-policy-autopilot-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for IAM Policy Autopilot: analyze source code and generate IAM policies in the browser or any WASM runtime."

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iam-policy-autopilot-policy-generation = { path = "../iam-policy-autopilot-policy-generation", default-features = false, features = ["wasm"] }

serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
anyhow = { workspace = true }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
