[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
regex = { workspace = true }
iam-policy-autopilot-policy-generation = { path = "../iam-policy-autopilot-policy-generation", features = ["model-generation"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
